2005-04-05  David Schleef  <ds@schleef.org>

	* configure.ac: disable creating _stdint.h
	* libswfdec/Makefile.am: set CFLAGS correctly for js
	* libswfdec/art.c: use glib types
	* libswfdec/js/Makefile.am: create jsautocfg.h at compile time
	* libswfdec/js/jsautocfg.h: remove
	* libswfdec/js/jslibmath.h: disable math code that isn't slurped
	* libswfdec/swfdec_internal.h: don't include _stdint.h
	* libswfdec/swfdec_render.c: use glib types

2005-04-04  Eric Anholt  <anholt@FreeBSD.org>

	* .cvsignore:
	* configure.ac:
	* libswfdec/Makefile.am:
	* libswfdec/actions.c:
	* libswfdec/actions_builtin.c:
	* libswfdec/actions_tags.c:
	* libswfdec/js/.cvsignore:
	* libswfdec/js/INTEGRATION:
	* libswfdec/js/Makefile.am:
	* libswfdec/js/js.c:
	* libswfdec/js/js.msg:
	* libswfdec/js/jsapi.c:
	* libswfdec/js/jsapi.h:
	* libswfdec/js/jsarena.c:
	* libswfdec/js/jsarena.h:
	* libswfdec/js/jsarray.c:
	* libswfdec/js/jsarray.h:
	* libswfdec/js/jsatom.c:
	* libswfdec/js/jsatom.h:
	* libswfdec/js/jsautocfg.h:
	* libswfdec/js/jsbit.h:
	* libswfdec/js/jsbool.c:
	* libswfdec/js/jsbool.h:
	* libswfdec/js/jsclist.h:
	* libswfdec/js/jscntxt.c:
	* libswfdec/js/jscntxt.h:
	* libswfdec/js/jscompat.h:
	* libswfdec/js/jsconfig.h:
	* libswfdec/js/jscpucfg.c:
	* libswfdec/js/jscpucfg.h:
	* libswfdec/js/jsdate.c:
	* libswfdec/js/jsdate.h:
	* libswfdec/js/jsdbgapi.c:
	* libswfdec/js/jsdbgapi.h:
	* libswfdec/js/jsdhash.c:
	* libswfdec/js/jsdhash.h:
	* libswfdec/js/jsdtoa.c:
	* libswfdec/js/jsdtoa.h:
	* libswfdec/js/jsemit.c:
	* libswfdec/js/jsemit.h:
	* libswfdec/js/jsexn.c:
	* libswfdec/js/jsexn.h:
	* libswfdec/js/jsfile.c:
	* libswfdec/js/jsfile.h:
	* libswfdec/js/jsfun.c:
	* libswfdec/js/jsfun.h:
	* libswfdec/js/jsgc.c:
	* libswfdec/js/jsgc.h:
	* libswfdec/js/jshash.c:
	* libswfdec/js/jshash.h:
	* libswfdec/js/jsinterp.c:
	* libswfdec/js/jsinterp.h:
	* libswfdec/js/jslibmath.h:
	* libswfdec/js/jslock.c:
	* libswfdec/js/jslock.h:
	* libswfdec/js/jslog2.c:
	* libswfdec/js/jslong.c: